feat: add plural value filter params
closes #76
